--- a/ervin/templates/ervin/event_list.html
+++ b/ervin/templates/ervin/event_list.html
@@ -1,4 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Events{% endblock %}
 {% block title %}Events{% endblock %}
+{% block empty_list %}<p>No events.</p>{% endblock %}
