--- a/ervin/templates/ervin/object_list.html
+++ b/ervin/templates/ervin/object_list.html
@@ -1,4 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Objects{% endblock %}
 {% block title %}Objects{% endblock %}
+{% block empty_list %}<p>No objects.</p>{% endblock %}
