--- a/ervin/templates/ervin/organization_list.html
+++ b/ervin/templates/ervin/organization_list.html
@@ -1,5 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Organizations{% endblock %}
 {% block title %}Organizations{% endblock %}
-
+{% block empty_list %}<p>No organizations.</p>{% endblock %}
