--- a/ervin/templates/ervin/person_list.html
+++ b/ervin/templates/ervin/person_list.html
@@ -1,4 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Persons{% endblock %}
 {% block title %}Persons{% endblock %}
+{% block empty_list %}<p>No persons.</p>{% endblock %}
