--- a/ervin/templates/ervin/place_list.html
+++ b/ervin/templates/ervin/place_list.html
@@ -1,4 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Places{% endblock %}
 {% block title %}Places{% endblock %}
+{% block empty_list %}<p>No places.</p>{% endblock %}
