--- a/ervin/templates/ervin/concept_list.html
+++ b/ervin/templates/ervin/concept_list.html
@@ -1,4 +1,5 @@
-{% extends "ervin/subject_list.html" %}
+{% extends "ervin/generic_list.html" %}
 
 {% block html_title %}Concepts{% endblock %}
 {% block title %}Concepts{% endblock %}
+{% block empty_list %}<p>No concepts.</p>{% endblock %}
