add generic display for subjects

--- a/ervin/templates/ervin/event.html
+++ b/ervin/templates/ervin/event.html
@@ -1,7 +1,2 @@
-{% extends "ervin/base.html" %}
-{% load ervintags %}
-{% block html_title %}Event: {{ event }}{% endblock %}
-{% block content %}
+{% extends "ervin/generic.html" %}
 
-<p>Event: {{ event }}</p>
-{% endblock %}
