--- a/ervin/templates/ervin/object.html
+++ b/ervin/templates/ervin/object.html
@@ -1,7 +1,1 @@
-{% extends "ervin/base.html" %}
-{% load ervintags %}
-{% block html_title %}Object: {{ frbrobject }}{% endblock %}
-{% block content %}
-
-<p>Object: {{ frbrobject }}</p>
-{% endblock %}
+{% extends "ervin/generic.html" %}
