--- a/ervin/templates/ervin/concept.html
+++ b/ervin/templates/ervin/concept.html
@@ -1,7 +1,1 @@
-{% extends "ervin/base.html" %}
-{% load ervintags %}
-{% block html_title %}Concept: {{ concept }}{% endblock %}
-{% block content %}
-
-<p>Concept: {{ concept }}</p>
-{% endblock %}
+{% extends "ervin/generic.html" %}
