--- a/ervin/templates/ervin/place.html
+++ b/ervin/templates/ervin/place.html
@@ -1,7 +1,1 @@
-{% extends "ervin/base.html" %}
-{% load ervintags %}
-{% block html_title %}Place: {{ place }}{% endblock %}
-{% block content %}
-
-<p>Place: {{ place }}</p>
-{% endblock %}
+{% extends "ervin/generic.html" %}
