add expression_list view

--- a/ervin/templates/ervin/base_navigate.html
+++ b/ervin/templates/ervin/base_navigate.html
@@ -14,8 +14,8 @@
       <h6>Group 1</h6>
       <ul>
         <li><a href="/works">Works</a></li>
-        <!-- <li><a href="/expressions">Expressions</a></li>
-        <li><a href="/editions">Editions</a></li>
+        <li><a href="/expressions">Expressions</a></li>
+        <!-- <li><a href="/editions">Editions</a></li>
         <li><a href="/items">Items</a></li> -->
       </ul>
       <h6>Group 2</h6>
