--- a/ervin/templates/ervin/home.html
+++ b/ervin/templates/ervin/home.html
@@ -20,6 +20,7 @@
     <div class="block">
       <ul>
         <li><a href="/works">Works</a></li>
+        <li><a href="/expressions">Expressions</a></li>
       </ul>
     </div>
   </div>
